--- a/views/index.jade
+++ b/views/index.jade
@@ -50,6 +50,9 @@ block content
   br
   a(href='http://localhost:3000/street/query/centerof/rua boa vista/json') http://localhost:3000/street/query/centerof/name/json
   br
+  a(href='http://localhost:3000/street/query/centerof/rua boa vista/geojson') http://localhost:3000/street/query/centerof/name/geojson
+  br
+  br
   br
   | calcDistanceStreets:
   br
