--- a/views/index.jade
+++ b/views/index.jade
@@ -44,6 +44,21 @@ block content
   a(href='http://localhost:3000/street/1/perimeter/json') http://localhost:3000/street/id/perimeter/json
   br
   a(href='http://localhost:3000/street/1/perimeter/geojson') http://localhost:3000/street/id/perimeter/geojson
+  br
+  br
+  | getCenterOfStreet:
+  br
+  a(href='http://localhost:3000/street/query/centerof/rua boa vista/json') http://localhost:3000/street/query/centerof/name/json
+  br
+  br
+  | calcDistanceStreets:
+  br
+  a(href='http://localhost:3000/street/query/distance/rua boa vista/to/rua tres de dezembro/json') http://localhost:3000/street/query/distance/name/to/name/json
+  br
+
+
+
+
 
 
   
