--- a/views/index.jade
+++ b/views/index.jade
@@ -54,11 +54,12 @@ block content
   br
   br
   br
-  | calcDistanceStreets:
+  | getCenterofTwoStreets:
   br
-  a(href='http://localhost:3000/street/query/distance/rua boa vista/to/rua tres de dezembro/json') http://localhost:3000/street/query/distance/name/to/name/json
+  a(href='http://localhost:3000/street/query/centerof/rua boa vista/to/rua tres de dezembro/json') http://localhost:3000/street/query/centerof/name/to/name/json
   br
-
+  a(href='http://localhost:3000/street/query/centerof/rua boa vista/to/rua tres de dezembro/geojson') http://localhost:3000/street/query/centerof/name/to/name/geojson
+  br
 
 
 
