--- a/views/index.jade
+++ b/views/index.jade
@@ -46,7 +46,7 @@ block content
   a(href='http://localhost:3000/street/1/perimeter/geojson') http://localhost:3000/street/id/perimeter/geojson
   br
   br
-  | getCenterOfStreet:
+  | getCenterofStreet:
   br
   a(href='http://localhost:3000/street/query/centerof/rua boa vista/json') http://localhost:3000/street/query/centerof/name/json
   br
