--- a/views/index.jade
+++ b/views/index.jade
@@ -13,9 +13,9 @@ block content
   br
   | getSingleStreet:
   br
-  a(href='http://localhost:3000/street/1/json/') http://localhost:3000/street/id/json
+  a(href='http://localhost:3000/street/1/json') http://localhost:3000/street/id/json
   br
-  a(href='http://localhost:3000/street/1/geojson/') http://localhost:3000/street/id/geojson
+  a(href='http://localhost:3000/street/1/geojson') http://localhost:3000/street/id/geojson
   br
   br
   | getNameSingleStreet:
