--- a/views/index.jade
+++ b/views/index.jade
@@ -10,12 +10,16 @@ block content
   br
   a(href='http://localhost:3000/street/all/geojson') http://localhost:3000/street/all/geojson
   br
+  a(href='http://localhost:3000/street/all/xml') http://localhost:3000/street/all/xml
+  br
   br
   | getSingleStreet:
   br
   a(href='http://localhost:3000/street/1/json') http://localhost:3000/street/id/json
   br
   a(href='http://localhost:3000/street/1/geojson') http://localhost:3000/street/id/geojson
+  br
+  a(href='http://localhost:3000/street/1/xml') http://localhost:3000/street/id/xml
   br
   br
   | getNameSingleStreet:
@@ -24,12 +28,16 @@ block content
   br
   a(href='http://localhost:3000/street/1/name/geojson') http://localhost:3000/street/id/name/geojson
   br
+  a(href='http://localhost:3000/street/1/name/xml') http://localhost:3000/street/id/name/xml
+  br
   br
   | getGeomSingleStreet:
   br
   a(href='http://localhost:3000/street/1/geom/json') http://localhost:3000/street/id/geom/json
   br
   a(href='http://localhost:3000/street/1/geom/geojson') http://localhost:3000/street/id/geom/geojson
+  br
+  a(href='http://localhost:3000/street/1/geom/xml') http://localhost:3000/street/id/geom/xml
   br
   br
   | getTypeSingleStreet:
@@ -38,12 +46,16 @@ block content
   br
   a(href='http://localhost:3000/street/1/type/geojson') http://localhost:3000/street/id/type/geojson
   br
+  a(href='http://localhost:3000/street/1/type/xml') http://localhost:3000/street/id/type/xml
+  br
   br
   | getPerimeterSingleStreet:
   br
   a(href='http://localhost:3000/street/1/perimeter/json') http://localhost:3000/street/id/perimeter/json
   br
   a(href='http://localhost:3000/street/1/perimeter/geojson') http://localhost:3000/street/id/perimeter/geojson
+  br
+  a(href='http://localhost:3000/street/1/perimeter/xml') http://localhost:3000/street/id/perimeter/xml
   br
   br
   | getCenterofStreet:
@@ -52,6 +64,7 @@ block content
   br
   a(href='http://localhost:3000/street/query/centerof/rua boa vista/geojson') http://localhost:3000/street/query/centerof/name/geojson
   br
+  a(href='http://localhost:3000/street/query/centerof/rua boa vista/xml') http://localhost:3000/street/query/centerof/name/xml
   br
   br
   | getCenterofTwoStreets:
@@ -60,7 +73,8 @@ block content
   br
   a(href='http://localhost:3000/street/query/centerof/rua boa vista/to/rua tres de dezembro/geojson') http://localhost:3000/street/query/centerof/name/to/name/geojson
   br
-
+  a(href='http://localhost:3000/street/query/centerof/rua boa vista/to/rua tres de dezembro/xml') http://localhost:3000/street/query/centerof/name/to/name/xml
+  br
 
 
 
