--- a/views/index.jade
+++ b/views/index.jade
@@ -40,15 +40,6 @@ block content
   a(href='http://localhost:3000/street/1/geom/xml') http://localhost:3000/street/id/geom/xml
   br
   br
-  | getTypeSingleStreet:
-  br
-  a(href='http://localhost:3000/street/1/type/json') http://localhost:3000/street/id/type/json
-  br
-  a(href='http://localhost:3000/street/1/type/geojson') http://localhost:3000/street/id/type/geojson
-  br
-  a(href='http://localhost:3000/street/1/type/xml') http://localhost:3000/street/id/type/xml
-  br
-  br
   | getPerimeterSingleStreet:
   br
   a(href='http://localhost:3000/street/1/perimeter/json') http://localhost:3000/street/id/perimeter/json
@@ -73,9 +64,11 @@ block content
   br
   a(href='http://localhost:3000/street/query/centerof/rua boa vista/to/rua tres de dezembro/geojson') http://localhost:3000/street/query/centerof/name/to/name/geojson
   br
-  a(href='http://localhost:3000/street/query/centerof/rua boa vista/to/rua tres de dezembro/xml') http://localhost:3000/street/query/centerof/name/to/name/xml
   br
-
+  | getClosestPoint:
+  br
+  a(href='http://localhost:3000//places/query/ClosestPoint/1/1/json') http://localhost:3000//places/query/ClosestPoint/streetId/pointId/json
+  
 
 
 
