--- a/views/index.jade
+++ b/views/index.jade
@@ -31,22 +31,13 @@ block content
   a(href='http://localhost:3000/street/1/xml') http://localhost:3000/street/id/xml
   br
   br
-  | getTableSingleStreet:
+  | getSinglePlaces:
   br
-  a(href='http://localhost:3000/street/1/name/json') http://localhost:3000/street/id/tableName/json
+  a(href='http://localhost:3000/places/5/json') http://localhost:3000/places/id/json
   br
-  a(href='http://localhost:3000/street/1/name/geojson') http://localhost:3000/street/id/tableName/geojson
+  a(href='http://localhost:3000/places/5/geojson') http://localhost:3000/places/id/geojson
   br
-  a(href='http://localhost:3000/street/1/name/xml') http://localhost:3000/street/id/tableName/xml
-  br
-  br
-  | getCenterofTwoStreets:
-  br
-  a(href='http://localhost:3000/street/query/centerof/rua boa vista/to/rua tres de dezembro/json') http://localhost:3000/street/query/centerof/name/to/name/json
-  br
-  a(href='http://localhost:3000/street/query/centerof/rua boa vista/to/rua tres de dezembro/geojson') http://localhost:3000/street/query/centerof/name/to/name/geojson
-  br
-  a(href='http://localhost:3000/street/query/centerof/rua boa vista/to/rua tres de dezembro/xml') http://localhost:3000/street/query/centerof/name/to/name/xml
+  a(href='http://localhost:3000/places/5/xml') http://localhost:3000/places/id/xml
   br
   br
   | getClosestPoint:
