--- a/views/index.jade
+++ b/views/index.jade
@@ -40,9 +40,9 @@ block content
   a(href='http://localhost:3000/places/5/xml') http://localhost:3000/places/id/xml
   br
   br
-  | getClosestPoint:
+  | getPointFromInput:
   br
-  a(href='http://localhost:3000/places/query/ClosestPoint/5/json') http://localhost:3000/places/query/id/json
+  a(href='http://localhost:3000/places/query/PointFromInput/rua augusta/json') http://localhost:3000/places/query/id/json
   
 
 
