--- a/views/index.jade
+++ b/views/index.jade
@@ -13,7 +13,7 @@ block content
   a(href='http://localhost:3000/street/all/xml') http://localhost:3000/street/all/xml
   br
   br
-  | getAllPoints:
+  | getAllPlaces:
   br
   a(href='http://localhost:3000/places/all/json') http://localhost:3000/places/all/json
   br
@@ -42,7 +42,7 @@ block content
   br
   | getPointFromInput:
   br
-  a(href='http://localhost:3000/places/query/PointFromInput/rua augusta/json') http://localhost:3000/places/query/id/json
+  a(href='http://localhost:3000/places/query/PointFromInput/Collegio Santa Ignez/json') http://localhost:3000/places/query/text/json
   
 
 
