--- a/views/index.jade
+++ b/views/index.jade
@@ -40,7 +40,7 @@ block content
   a(href='http://localhost:3000/places/5/xml') http://localhost:3000/places/id/xml
   br
   br
-  | getPointFromInput:
+  | getPointFromText:
   br
   a(href='http://localhost:3000/places/query/PointFromInput/Collegio Santa Ignez/json') http://localhost:3000/places/query/text/json
   
