--- a/views/index.jade
+++ b/views/index.jade
@@ -6,43 +6,43 @@ block content
   br
   | getAllStreets:
   br
-  a(href='http://localhost:3000/street/all/json') http://localhost:3000/street/all/json
+  a(href='http://localhost:3000/api/street/all/json') http://localhost:3000/api/street/all/json
   br
-  a(href='http://localhost:3000/street/all/geojson') http://localhost:3000/street/all/geojson
+  a(href='http://localhost:3000/api/street/all/geojson') http://localhost:3000/api/street/all/geojson
   br
-  a(href='http://localhost:3000/street/all/xml') http://localhost:3000/street/all/xml
+  a(href='http://localhost:3000/api/street/all/xml') http://localhost:3000/api/street/all/xml
   br
   br
   | getAllPlaces:
   br
-  a(href='http://localhost:3000/places/all/json') http://localhost:3000/places/all/json
+  a(href='http://localhost:3000/api/places/all/json') http://localhost:3000/api/places/all/json
   br
-  a(href='http://localhost:3000/places/all/geojson') http://localhost:3000/places/all/geojson
+  a(href='http://localhost:3000/api/places/all/geojson') http://localhost:3000/api/places/all/geojson
   br
-  a(href='http://localhost:3000/places/all/xml') http://localhost:3000/places/all/xml
+  a(href='http://localhost:3000/api/places/all/xml') http://localhost:3000/api/places/all/xml
   br
   br
   | getSingleStreet:
   br
-  a(href='http://localhost:3000/street/1/json') http://localhost:3000/street/id/json
+  a(href='http://localhost:3000/api/street/1/json') http://localhost:3000/api/street/id/json
   br
-  a(href='http://localhost:3000/street/1/geojson') http://localhost:3000/street/id/geojson
+  a(href='http://localhost:3000/api/street/1/geojson') http://localhost:3000/api/street/id/geojson
   br
-  a(href='http://localhost:3000/street/1/xml') http://localhost:3000/street/id/xml
+  a(href='http://localhost:3000/api/street/1/xml') http://localhost:3000/api/street/id/xml
   br
   br
   | getSinglePlaces:
   br
-  a(href='http://localhost:3000/places/5/json') http://localhost:3000/places/id/json
+  a(href='http://localhost:3000/api/places/5/json') http://localhost:3000/api/places/id/json
   br
-  a(href='http://localhost:3000/places/5/geojson') http://localhost:3000/places/id/geojson
+  a(href='http://localhost:3000/api/places/5/geojson') http://localhost:3000/api/places/id/geojson
   br
-  a(href='http://localhost:3000/places/5/xml') http://localhost:3000/places/id/xml
+  a(href='http://localhost:3000/api/places/5/xml') http://localhost:3000/api/places/id/xml
   br
   br
-  | getPointFromText:
+  | Geolocation:
   br
-  a(href='http://localhost:3000/places/query/PointFromInput/Collegio Santa Ignez/json') http://localhost:3000/places/query/text/json
+  a(href='http://localhost:3000/api/geolocation/Collegio Santa Ignez/json') http://localhost:3000/api/geolocation/text/json
   
 
 
