--- a/views/index.jade
+++ b/views/index.jade
@@ -4,6 +4,11 @@ block content
   b Index of:
   br
   br
+  | searchPage
+  br
+  a(href='http://localhost:3000/search') http://localhost:3000/search
+  br
+  br
   | getAllStreets:
   br
   a(href='http://localhost:3000/api/street/all/json') http://localhost:3000/api/street/all/json
