--- a/views/index.jade
+++ b/views/index.jade
@@ -45,7 +45,7 @@ block content
   a(href='http://localhost:3000/api/places/5/xml') http://localhost:3000/api/places/id/xml
   br
   br
-  | Geolocation:
+  | geolocation:
   br
   a(href='http://localhost:3000/api/geolocation/Collegio Santa Ignez/json') http://localhost:3000/api/geolocation/text/json
   
