--- a/views/search.jade
+++ b/views/search.jade
@@ -4,6 +4,7 @@ html
     meta(charset='UTF-8')
     script(type='text/javascript').
   body
-    p
+    h1= title
+    br
     label(for='searchbox', style='display: inline-block; width: 160px;') Search: 
     input#searchbox(type='text', value='')
