--- a/views/search.jade
+++ b/views/search.jade
@@ -8,3 +8,4 @@ html
     br
     label(for='searchbox', style='display: inline-block; width: 160px;') Search: 
     input#searchbox(type='text', value='')
+    button#button_search(type='submit', onclick="location.href='/api/geolocation/'+document.getElementById('searchbox').value+'/json';") Submit
