--- a/views/index.jade
+++ b/views/index.jade
@@ -9,6 +9,11 @@ block content
   a(href='http://localhost:3000/search') http://localhost:3000/search
   br
   br
+  | searchPage 2
+  br
+  a(href='http://localhost:3000/search2') http://localhost:3000/search2
+  br
+  br
   | getAllStreets:
   br
   a(href='http://localhost:3000/api/street/all/json') http://localhost:3000/api/street/all/json
