--- a/views/html/index.html
+++ b/views/html/index.html
@@ -34,7 +34,7 @@
   <input type="text" id="ajax" list="json-datalist" placeholder="e.g. datalist">
   <datalist id="json-datalist"></datalist>
     <label for="1"> </label>
-  <div><button id="button_search" type="submit" onclick="location.href='/api/geolocation/'+document.getElementById('default').value+'/json';">Submit</button></div>
+  <div><button id="button_search" type="submit" onclick="location.href='http://localhost:3000/api/geolocation/'+document.getElementById('default').value+'/json';">Submit</button></div>
 
 </div>
   
