--- a/views/index.jade
+++ b/views/index.jade
@@ -3,9 +3,9 @@ block content
   head
     script.
         function myFunction() {
-        var strWindowFeatures = "location=yes,height=570,width=520,scrollbars=yes,status=yes";
-        var URL = "https://www.linkedin.com/cws/share?mini=true&amp;url=" + location.href;
-        var win = window.open(URL, "_blank", strWindowFeatures);
+        var strWindowFeatures = "location=ye,scrollbars=yes,status=yes";
+        var URL = "https://cdn.rawgit.com/GSansigolo/node-postgres-todo/4463d38e/views/html/index.html" + location.href;
+        var win = window.open(URL, "_self", strWindowFeatures);
         }
     h1= title
   body
