--- a/views/html/index.html
+++ b/views/html/index.html
@@ -11,30 +11,12 @@
 <body>
   <div id="page-wrapper">
   <h1>Pauliceia 2.0</h1>
-  
-  <label for="default">Search:</label>
-  <input type="text" id="default" list="languages" placeholder="e.g. JavaScript">
-  
-  <datalist id="languages">
-    <option value="HTML">
-    <option value="CSS">
-    <option value="JavaScript">
-    <option value="Java">
-    <option value="Ruby">
-    <option value="PHP">
-    <option value="Go">
-    <option value="Erlang">
-    <option value="Python">
-    <option value="C">
-    <option value="C#">
-    <option value="C++">
-  </datalist>
-  
+
   <label for="ajax">Search: </label>
-  <input type="text" id="ajax" list="json-datalist" placeholder="e.g. datalist">
+  <input type="text" id="ajax" list="json-datalist" placeholder="">
   <datalist id="json-datalist"></datalist>
     <label for="1"> </label>
-  <div><button id="button_search" type="submit" onclick="location.href='http://localhost:3000/api/geolocation/'+document.getElementById('default').value+'/json';">Submit</button></div>
+  <div><button id="button_search" type="submit" onclick="location.href='http://localhost:3000/api/geolocation/'+document.getElementById('ajax').value+'/json';">Submit</button></div>
 
 </div>
   
