--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
     script.
         function myFunction() {
         var strWindowFeatures = "location=ye,scrollbars=yes,status=yes";
-        var URL = "https://cdn.rawgit.com/GSansigolo/node-postgres-todo/4463d38e/views/html/index.html" + location.href;
+        var URL = "https://cdn.rawgit.com/GSansigolo/node-postgres-todo/6ed5514e/views/html/index.html";
         var win = window.open(URL, "_self", strWindowFeatures);
         }
     h1= title
@@ -14,12 +14,7 @@ block content
     br
     | searchPage
     br
-    a(href='http://localhost:3000/search') http://localhost:3000/search
-    br
-    br
-    | searchPage 2
-    br
-    a(href='javascript:myFunction();') http://localhost:3000/search2
+    a(href='javascript:myFunction();') https://cdn.rawgit.com/.../html/index.html
     br
     br
     | getAllStreets:
