--- a/views/html/index.html
+++ b/views/html/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   
-  <title>pauliceia 2.0</title>
+  <title>Pauliceia 2.0</title>
 
       <link rel="stylesheet" href="css/style.css">
 </head>
