--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
     script.
         function myFunction() {
         var strWindowFeatures = "location=ye,scrollbars=yes,status=yes";
-        var URL = "https://cdn.rawgit.com/GSansigolo/node-postgres-todo/9957f4dd/views/html/index.html";
+        var URL = "https://cdn.rawgit.com/GSansigolo/node-postgres-todo/a118455a/views/html/index.html";
         var win = window.open(URL, "_self", strWindowFeatures);
         }
     h1= title
@@ -55,5 +55,5 @@ block content
     br
     | geolocation:
     br
-    a(href='http://localhost:3000/api/geolocation/Collegio Santa Ignez/json') http://localhost:3000/api/geolocation/text/json
+    a(href='http://localhost:3000/api/geolocation/Collegio Santa Ignez, /json') http://localhost:3000/api/geolocation/text,year/json
     
