--- a/views/index.jade
+++ b/views/index.jade
@@ -46,14 +46,14 @@ block content
     br
     | getSinglePlaces:
     br
-    a(href='http://localhost:3000/api/places/5/json') http://localhost:3000/api/places/id/json
+    a(href='http://localhost:3000/api/places/71/json') http://localhost:3000/api/places/id/json
     br
-    a(href='http://localhost:3000/api/places/5/geojson') http://localhost:3000/api/places/id/geojson
+    a(href='http://localhost:3000/api/places/71/geojson') http://localhost:3000/api/places/id/geojson
     br
-    a(href='http://localhost:3000/api/places/5/xml') http://localhost:3000/api/places/id/xml
+    a(href='http://localhost:3000/api/places/71/xml') http://localhost:3000/api/places/id/xml
     br
     br
     | geolocation:
     br
-    a(href='http://localhost:3000/api/geolocation/Collegio Santa Ignez, 1935/json') http://localhost:3000/api/geolocation/text, year/json
+    a(href='http://localhost:3000/api/geolocation/rua lucrecia leme, 1930/json') http://localhost:3000/api/geolocation/text, year/json
     
