--- a/views/index.jade
+++ b/views/index.jade
@@ -18,29 +18,30 @@ block content
     br
     a(href='javascript:myFunction();') > SearchPage
     br
-    a(href='http://localhost:3000/api/street/all/json') > GetAllStreetsJson
     br
-    a(href='http://localhost:3000/api/street/all/geojson') > GetAllStreetsGeoJson
+    a(href='http://localhost:3000/api/street/all/json') > getAllStreetsJson
     br
-    a(href='http://localhost:3000/api/street/all/xml') > GetAllStreetsXML
+    a(href='http://localhost:3000/api/street/all/geojson') > getAllStreetsGeoJson
     br
-    a(href='http://localhost:3000/api/places/all/json') > GetAllPlacesJson
+    a(href='http://localhost:3000/api/street/all/xml') > getAllStreetsXML
     br
-    a(href='http://localhost:3000/api/places/all/geojson') > GetAllPlacesGeoJson
+    a(href='http://localhost:3000/api/places/all/json') > getAllPlacesJson
     br
-    a(href='http://localhost:3000/api/places/all/xml') > GetAllPlacesXML
+    a(href='http://localhost:3000/api/places/all/geojson') > getAllPlacesGeoJson
     br
-    a(href='http://localhost:3000/api/street/1/json') > GetSingleStreetJson
+    a(href='http://localhost:3000/api/places/all/xml') > getAllPlacesXML
     br
-    a(href='http://localhost:3000/api/street/1/geojson') > GetSingleStreetGeoJson
+    a(href='http://localhost:3000/api/street/1/json') > getSingleStreetJson
     br
-    a(href='http://localhost:3000/api/street/1/xml') > GetSingleStreetXML
+    a(href='http://localhost:3000/api/street/1/geojson') > getSingleStreetGeoJson
     br
-    a(href='http://localhost:3000/api/places/71/json') > GetSinglePlaceJson
+    a(href='http://localhost:3000/api/street/1/xml') > getSingleStreetXML
     br
-    a(href='http://localhost:3000/api/places/71/geojson') > GetSinglePlaceGeoJson
+    a(href='http://localhost:3000/api/places/71/json') > getSinglePlaceJson
     br
-    a(href='http://localhost:3000/api/places/71/xml') > GetSinglePlaceXML
+    a(href='http://localhost:3000/api/places/71/geojson') > getSinglePlaceGeoJson
+    br
+    a(href='http://localhost:3000/api/places/71/xml') > getSinglePlaceXML
     br
     a(href='http://localhost:3000/api/listQuickSearch') > getListQuickSearchJson
     br
