--- a/views/index.jade
+++ b/views/index.jade
@@ -9,8 +9,8 @@ block content
         }
     h1= title
   body
-    h1 API REST
-    | A API REST proverá acesso para leitura dos dados geográficos do projeto. Segue abaixo a lista de rotas que a API REST possui. Logo 
+    h1 APIs REST
+    | As APIs REST proverão acesso para leitura dos dados geográficos do projeto. Segue abaixo a lista de rotas que a API REST possui. Logo 
     br
     | abaixo pode ser visto uma descrição de cada uma das rotas contendo o nome da mesma, o endereço, uma descri ação, as variáveis
     br
