--- a/views/index.jade
+++ b/views/index.jade
@@ -9,7 +9,7 @@ block content
         var win = window.open(URL, "_self", strWindowFeatures);
         }
     div
-      h1= title
+      img.className#IdName(src="https://raw.githubusercontent.com/GSansigolo/PauliceiaAPI/master/views/img/Code.png" alt="Image Title")
   body
     h1 APIs REST
     | As APIs REST proverão acesso para leitura dos dados geográficos do projeto. Segue abaixo a lista de rotas que a API REST possui. Logo 
