--- a/views/index.jade
+++ b/views/index.jade
@@ -8,8 +8,8 @@ block content
         var URL = "https://rawgit.com/GSansigolo/PauliceiaAPI/master/views/html/index.html";
         var win = window.open(URL, "_self", strWindowFeatures);
         }
-    div
-      img.className#IdName(src="https://raw.githubusercontent.com/GSansigolo/PauliceiaAPI/master/views/img/Code.png" alt="Image Title")
+    div.pledged(style="width:100%")
+      img.className#IdName(src="https://raw.githubusercontent.com/GSansigolo/PauliceiaAPI/master/views/img/header.png" alt="Image Title")
   body
     h1 APIs REST
     | As APIs REST proverão acesso para leitura dos dados geográficos do projeto. Segue abaixo a lista de rotas que a API REST possui. Logo 
