--- a/views/index.jade
+++ b/views/index.jade
@@ -56,28 +56,16 @@ block content
     div
       div
             h1 Exemplo de Chamadas:
-        p(style='margin-top: 0.12cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%')
-          br
-        dl
-          dd
-            table(width='585', cellpadding='4', cellspacing='0')
-              col(width='575')
+            table(width='650', cellpadding='2', cellspacing='0')
+              col(width='650')
               tr
-                td(width='575', valign='top', style='border: 1px solid #000000; padding: 0.1cm')
-                  p(style='margin-top: 0.05cm')
+                td(width='650', valign='top', style='border: 1px solid #000000; padding: 0.1cm')
                     cite
-                      font(size='3', style='font-size: 12pt')
-                        span(style='font-weight: normal')
-                          | GET
-                          | /api/geolocation/rua%20dos%20gusmoes,%2086,%201931/json
-        p(style='margin-top: 0.05cm; margin-bottom: 0cm; line-height: 100%')
-          br
-        p(style='margin-top: 0.05cm; margin-bottom: 0cm; line-height: 100%')
-          font(size='3', style='font-size: 12pt')
+                      font(size='2', style='font-size: 12pt')
+                          | GET www.website.com/api/geolocation/rua%20dos%20gusmoes,%2086,%201931/json
               
     h1 Exemplo Resposta:
     img.className#IdName(src="https://raw.githubusercontent.com/GSansigolo/PauliceiaAPI/master/views/img/Code.png" alt="Image Title")
-    br
     //p.codebox
       | [
       br
